--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Resgisteration Form</h1>
-    <form action="./end.html" target="_blank" >
+    <form action="./end.html"  >
       <label for="txt">Name:</label> <input type="text" id="txt" />
       <br />
       <br />
